# macos_security_logs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/collector/: audit.rs  mod.rs  unified.rs
src/models/: log_entry.rs
src/security/: mod.rs  permissions.rs  sanitization.rs
src/utils/: error.rs  mod.rs  rate_limiter.rs
tests/: integration_tests.rs
